# deb-ostree

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build.hl
cmd/: commands.h  deb_layer.h  hk_parser.h  logging.h  oci_puller.h  ostree_repo.h  overlay_manager.h  process.h  state_store.h  sysroot.h  types.h
config/: deb-ostree.hk.example
src/: cmd_cleanup.cpp  cmd_deploy.cpp  cmd_initramfs.cpp  cmd_install.cpp  cmd_rebase.cpp  cmd_rollback.cpp  cmd_status.cpp  cmd_uninstall.cpp  cmd_upgrade.cpp  deb_layer.cpp  hk_parser.cpp  logging.cpp  main.cpp  oci_puller.cpp  ostree_repo.cpp  process.cpp  state_store.cpp  sysroot.cpp
tests/: CMakeLists.txt  test_config_parser.cpp
